install/assets/main.css
body {
	padding: 80px 100px 50px 50px;
	background: #fff;
	color: #222;
	font: 68.75%/1.5 "Lucida Grande", Verdana, sans-serif;
	cursor: default;
}
form {
	margin: 0 auto;
	position: relative;
	width: 450px;
	padding-left: 200px;
}

/* Sidebar */

h1 {
	position: fixed;
	margin-left: -200px;
	padding: 0 0 18px 0;
	text-align: right;
	font-weight: normal;
	font-size: 1.25em;
	width: 150px;
}
h1 em {
	display: block;
	margin-top: 0.5em;
	color: rgba(0, 0, 0, 0.4);
	text-align: right;
	font-style: normal;
	font-size: 73.33%;
}
ul {
	position: fixed;
	color: rgba(0, 0, 0, 0.4);
	text-align: right;
	font-style: normal;
	list-style: none;
	margin: 55px 0 0 -200px;
	padding: 0 0 18px 0;
	text-align: right;
	font-weight: normal;
	width: 150px;

}
ul li.selected a {
	color: #000;
	text-decoration: none;
}
ul li.more {
	margin-top: 12px;
}
ul li.more a {
	width: 150px;
	color: rgba(0, 0, 0, 0.4);
	display: block;
	text-decoration: none;
}
ul li.more a:hover {
	text-decoration: underline;
}

/* Content */

h2 {
	margin-bottom: 10px;
}
fieldset {
	margin-top: 30px;
}
fieldset legend {
	font-size: 127.28%;
}
fieldset fieldset {
	padding-top: 30px !important;
}
fieldset fieldset legend {
	position: absolute;
	top: 10px;
	left: 10px;
	font-size: 1em;
	color: rgba(0, 0, 0, 0.4);
}
.option {
	margin: 0 0 0 20px;
}
.option input {
	margin-left: -20px;
	float: left;
	min-width: 0;
}
.option + p {
	margin: 5px 30px 0 20px;
	color: rgba(0, 0, 0, 0.4);
}
.submit {
	text-align: right;
}

/*a {
	color: #57b;
	text-decoration: underline;
	cursor: pointer;
}
a:hover {
	color: #222;
}
h2 {
	padding: 82px 0 1.5em;
	color: #887;
	text-shadow: -1px 2px 3px #ddd;
	font-weight: normal;
	font-size: 1em;
}
strong {
	text-shadow: -1px 2px 2px #ddd;
}
abbr {
	border: none;
}
code {
	font: 108% Monaco, monospace;
}
* {
	margin: 0;
	padding: 0;
}

/* Forms *!/
fieldset,
div.warning {
	margin-top: 82px;
	padding-bottom: 1.5em;
	border: none;
}
div.warning + fieldset {
	margin-top: 1.75em;
}
legend {
	padding-bottom: 1.25em;
	color: #887;
	text-shadow: -1px 2px 3px #ddd;
}
legend+label {
	margin-top: -0.2em;
}
fieldset fieldset {
	position: relative;
	margin-top: 1.75em;
	padding: 0 1.75em 1.5em;
	background: #eed;
}
fieldset fieldset legend {
	float: left;
	width: 100%;
	padding: 1.5em 0 1.25em;
	background: #eed;
	color: #776;
	text-shadow: -1px 2px 3px #ccc;
}
label {
	display: block;
	margin-top: 1.5em;
}
label input, select {
	position: relative;
	display: block;
	margin-top: 0.25em;
	min-width: 100%;
	max-width: 100%;
}
.group {
	padding: 1.5em 0 0;
}
.group:after {
	content: " ";
	height: 1%;
	display: block;
	clear: both;
}
.group label {
	margin: 0;
	float: right;
	width: 48%;
}
.group label:first-child {
	float: left;
}
.option {
	padding-left: 1.75em;
}
.option input {
	margin-left: -1.75em;
	float: left;
	min-width: 0;
}
.option + p {
	margin: 0.5em 0 0 1.9em;
	color: #998;
	font-size: 91%;
}
.submit {
	margin: 1.5em 0 5em;
	text-align: right;
}

/* Header *!/

/* Requirements *!/
dt {
	margin: 0 0 1.5em -12em;
	float: left;
	clear: both;
	width: 10em;
	text-align: right;
	text-shadow: -1px 2px 2px #ddd;
	font-weight: bold;
}
dd {
	margin-bottom: 1.5em;
	color: #665;
}

/* Messages *!/
.note, .warning {
	margin-top: 1.5em;
	padding: 1em 1.25em;
	color: #fff;
}
.note {
	background: #57b;
}
.warning {
	background: #d41;
}
p.warning {
	margin-top: 0;
	padding-top: 0;
}

p + p.warning {
	margin-top: 1em;
	padding-top: 1em;
}

/* Lists *!/
ol{
	margin-left: 1.5em;
}
ol li{
	margin-bottom: 1em;
}*/

